RESOLVED FIXED154692
REGRESSION (188611): Search field Cancel button should not overlap search text on extensions page.
https://bugs.webkit.org/show_bug.cgi?id=154692
Summary REGRESSION (188611): Search field Cancel button should not overlap search tex...
alan
Reported 2016-02-25 14:27:57 PST
1. go to https://safari-extensions.apple.com 2. type some text in search field Text scrolls behind Cancel button.
Attachments
Patch (68.49 KB, patch)
2016-02-25 16:13 PST, alan
no flags
Patch (68.50 KB, patch)
2016-02-26 11:08 PST, alan
no flags
Patch (68.47 KB, patch)
2016-02-26 20:05 PST, alan
no flags
Patch (68.43 KB, patch)
2016-02-26 20:13 PST, alan
no flags
alan
Comment 1 2016-02-25 14:28:12 PST
alan
Comment 2 2016-02-25 16:13:14 PST
Brent Fulgham
Comment 3 2016-02-25 20:22:49 PST
Comment on attachment 272258 [details] Patch I think this looks good. r=me.
WebKit Commit Bot
Comment 4 2016-02-26 09:00:45 PST
Comment on attachment 272258 [details] Patch Clearing flags on attachment: 272258 Committed r197167: <http://trac.webkit.org/changeset/197167>
WebKit Commit Bot
Comment 5 2016-02-26 09:00:49 PST
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 6 2016-02-26 10:06:44 PST
Re-opened since this is blocked by bug 154730
alan
Comment 7 2016-02-26 11:08:47 PST
WebKit Commit Bot
Comment 8 2016-02-26 19:32:47 PST
Comment on attachment 272345 [details] Patch Rejecting attachment 272345 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'validate-changelog', '--check-oops', '--non-interactive', 272345, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in LayoutTests/ChangeLog contains OOPS!. Full output: http://webkit-queues.webkit.org/results/888567
alan
Comment 9 2016-02-26 20:05:31 PST
WebKit Commit Bot
Comment 10 2016-02-26 20:07:49 PST
Comment on attachment 272395 [details] Patch Rejecting attachment 272395 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 272395, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in LayoutTests/ChangeLog contains OOPS!. Full output: http://webkit-queues.webkit.org/results/888715
alan
Comment 11 2016-02-26 20:13:15 PST
WebKit Commit Bot
Comment 12 2016-02-26 21:11:04 PST
Comment on attachment 272396 [details] Patch Clearing flags on attachment: 272396 Committed r197234: <http://trac.webkit.org/changeset/197234>
WebKit Commit Bot
Comment 13 2016-02-26 21:11:08 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.